Part 3 - Spring security, new db attributes, integration test
