# src/main/java/com/homework/morosystems/repository/UserEntity.java
@@ -24,4 +24,10 @@ public class UserEntity {
 
     @Column(nullable = false, length = 100)
     private String name;
+
+    @Column(nullable = false, unique = true, length = 100)
+    private String username;
+
+    @Column(nullable = false)
+    private String password;
 }
